# AngioEye

./: .gitignore  AngioEye.spec  README.md  build_installer.ps1  default_settings.json  main.py  pyproject.toml  requirements.txt  settings.json
.github/scripts/: pipeline_docs_ast.py  pipeline_docs_latex_gen.py
.github/workflows/: ci.yml  pipeline_docs.yml  ruff-lint-check.yml
AngioEye/: angio_eye.py  cli.py  process_app.py
AngioEye/pipelines/: __init__.py  base.py  basic_stats.py  static_example.py  tauh_n10.py  utils.py  velocity_comparison.py
Viewer/: viewer.py
docs/pipelines/: Segments.tex  Windkessel_RC.tex  arterial_velocity_segment.tex  basic_stats.tex  dummy_heavy.tex  modal_analysis.tex  pulse_waveform_shape_metrics(harmonic analysis).tex  pulsewaveformshapemetrics .tex  segment_velocity_waveform_shape_metrics.tex  static_example.tex
installer/: AngioEye.iss
scripts/: build-installer.ps1  gen_optional_reqs.py
src/: Untitled-1.ipynb  angio_eye.py  app_settings.py  batch_engine.py  cli.py  file_paths.py  file_paths_h5.py  graphics.py  groups_comparison_dashboard.py  launcher.py  main.py  variability_heterogeneity_dashboard.py
src/analysis/: analysis_class.py  analysis_settings.json
src/angioeye_io/: __init__.py  archive_io.py  hdf5_io.py  hdf5_schema.py
src/h5/: h5_helper.py
src/input_output/: __init__.py  archive_io.py  hdf5_io.py  hdf5_schema.py  inputs.py
src/logger/: logger_class.py
src/pipeline_engine/: __init__.py  execution.py
src/pipelines/: Segments.py  Segments_velocity_waveform_shape_metrics.py  Windkessel_RC.py  __init__.py  absolute_waveform_metrics.py  arterial_shape_news_metrics_test.py  arterial_velocity_metrics_test.py  arterial_velocity_segment.py  arterial_velocity_waveform_shape_metrics.py  arterial_waveform_shape_metrics.py  arterial_waveform_shape_news_metrics.py  basic_stats.py  doc_test_fake_pipeline.py  dummy_heavy.py  local_transfer.py  lowrank_pulsatility_metrics.py  modal_analysis.py  old_seg_metrics.py  profile_analysis.py  pulse_waveform_shape_metrics(harmonic analysis).py  pulse_waveform_shape_metrics(harmonic_analysis).py  pulsewaveformshapemetrics .py  recreatesig.py  segment_velocity_waveform_shape_metrics.py  segment_velocity_waveform_shape_metrics_test.py  signal_reconstruction_factor_reduced.py  static_example.py  tauh_n10.py  tauh_n10_per_beat.py  v_profile_modeling.py  velocity_comparison.py  waveform_harmonic_organization.py  waveform_shape_metrics.py  waveform_shape_metrics_denoised.py  waveform_shape_metrics_denoised_correl.py  (+6 more)
test/: test_angio_eye.py  test_app_settings.py  test_batch_engine.py  test_build_installer.py  test_composite_scoring.py  test_groups_comparison_dashboard.py  test_holo_input_status.py  test_pipeline_engine.py  test_pipeline_package_discovery.py  test_postprocess_tutorial.py  test_variability_heterogeneity_dashboard.py  test_waveform_shape_metrics_laplacian_graph.py  test_workflows.py
(+116 files in other folders)
