[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "AngioEye"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "h5py>=3.15.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2"
]

[project.optional-dependencies]
dev = [
    "ruff"
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["F", "E", "W", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"