[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "AngioEye"
version = "1.5.0"
description = "Cohort-analysis engine for retinal Doppler holography"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }

# =============== [ DEPENDENCIES ] ===============

dependencies = ["numpy>=1.24", "h5py>=3.9", "sv-ttk>=2.6"]

[project.optional-dependencies]
# For specific pipelines
pipelines = ["torch>=2.2", "pandas>=2.1"]

# For developers
dev = ["ruff", "pre-commit", "pyinstaller"]

# =============== [ SCRIPTS ] ===============

[project.scripts]
# This allows users to simply type 'angioeye' in their terminal
angioeye = "angio_eye:main"
angioeye-cli = "cli:main"
build-installer = "scripts.build_installer:main"

lint-tool = "scripts.ruff_linter:main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["angio_eye", "cli", "app_settings"]

[tool.setuptools.packages.find]
where = ["src"]

# =============== [ TOOLS OPTIONS ] ===============

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# pyupgrade (`UP`), isort (`I`), and flake8-bugbear (`B`).
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
